# atomatic

./: .gitignore  Cargo.toml  justfile  pyproject.toml
atomatic/: bias.py  constraints.py
atomatic/calculators/: xtb.py
atomatic/geometry/: __init__.py  bonding.py  molecule.py  rmsd.py
atomatic/rsrc/: Cargo.toml
atomatic/rsrc/src/: lib.rs  rmsd.rs  shake.rs  wall.rs
atomatic/tools/: packmol.py
