[project]
name = "atomatic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ase>=3.23.0",
    "numpy>=2.2.0",
    "scipy>=1.11",
]


[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.maturin]
python-source = "."
module-name = "atomatic._ext"
manifest-path = "atomatic/rsrc/Cargo.toml"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

