[project]
name = "atomatic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ase>=3.23.0",
    "scipy>=1.12.0",
    "numpy",
    "numba>=0.60.0",
    "matscipy>=1.1.1",
    "typing-extensions>=4.12.2",
]


[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.maturin]
python-source = "."
module-name = "atomatic._ext"
manifest-path = "atomatic/rsrc/Cargo.toml"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

