[package]
name = "atomatic"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "atomatic"

[dependencies]
ndarray = { version = "0.16.1", features = ["rayon"] }
pyo3 = { version = "0.23.3", features = ["extension-module"] }
numpy = "0.23.0"
rayon = "1.10.0"
nalgebra = "0.33.2"
